fix brief flashes of refine search panel - by having a lower z-index than the footer, any excess height of  the refine search panel will not be visible to the user

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -184,6 +184,7 @@ footer {
   height: $height-footer;
   padding-left: $padding-site;
   padding-right: $padding-site;
+  z-index: 1; // Hide excess height of content sidenav underneath footer.
 }
 
 footer.footer-xs {
